--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,6 @@ body {
     background: $light;
     color: #444;
     font-size: 16px;
-    overflow: hidden;
 }
 
 b {
