--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,8 +1,4 @@
 .container {
-    min-height: 100%;
-    position: relative;
-    box-sizing: border-box;
-
     padding: 55px 10px 65px; // 65px for footer
 }
 
